data/derived/fa15/progs/unify/prog0979.ml.out
Characters 18-25:
  let _ = fixpoint (collatz, 1);;
                    ^^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type 'a * 'b -> 'a * 'b
       Type int is not compatible with type 'a * 'b 
